--- a/gta lexa free demo version 9.html
+++ b/gta lexa free demo version 9.html
@@ -62,13 +62,26 @@
             opacity: 0.8;
         }
 
-        /* --- МЕНЮ --- */
+        /* --- МЕНЮ (ИСПРАВЛЕННАЯ ЦЕНТРОВКА) --- */
         #menu {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.9); 
             display: flex; flex-direction: column; justify-content: center; align-items: center;
             z-index: 100; color: white;
             box-shadow: inset 0 0 100px rgba(0,0,0,0.5); 
+            text-align: center; /* Добавлено для центровки текста */
+        }
+        /* Убеждаемся, что контейнер заголовка центрируется правильно */
+        #menu > div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        /* Убеждаемся, что кнопки центрируются правильно */
+        .menu-options {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         #menu button {
@@ -88,7 +101,7 @@
         }
         
         h1 { 
-            font-size: 6em; color: red; margin: 0; 
+            font-size: 6em; color: red; margin: 0 20px; /* Отступ от эмодзи */
             text-shadow: 4px 4px 0px #000;
             font-family: 'Impact', sans-serif;
             letter-spacing: 5px;
@@ -147,7 +160,7 @@
     
     <div id="hud">
         <div id="timeDisplay">12:00</div>
-        <div id="hpDisplay" style="color: red; margin-top: 5px;"❤️ ЗДОРОВЬЕ: 100</div>
+        <div id="hpDisplay" style="color: red; margin-top: 5px;">❤️ ЗДОРОВЬЕ: 100</div>
         <div id="weaponDisplay" style="color: orange; margin-top: 5px;">👊 КУЛАКИ</div>
         <div id="wantedLevel" style="color: white; margin-top: 5px;">★ РОЗЫСК: 0</div>
         <div style="font-size: 0.8em; color: #ffff00; margin-top:10px;">V12.0 (ФИНАЛЬНЫЙ РЕЛИЗ С МЕМАМИ)</div>
